--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-python-telegram-bot==20.7
-# Match PTB's constraint to avoid resolver conflict
-httpx~=0.25.2
-pydantic>=2.7,<3
+python-telegram-bot==21.6
+httpx==0.27.2
